--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Abbas Tariverdi (Abo)
+image: "/static/images/abbas8.jpg"
 
 # -------------------------------------------------------
 # Globals.
